# lox-one

./: Cargo.toml  LICENSE  README.md  log.txt
.github/workflows/: general.yaml
examples/: assignment.lox  block_stmt.lox  call_stmt.lox  continue.lox  errors.lox  expr_stmt.lox  for_stmt.lox  fun_decl.lox  if_else_stmt.lox  if_stmt.lox  logic_and.lox  logic_or.lox  print_stmt.lox  variables.lox  while_stmt.lox
src/: ast.rs  callable.rs  cli.rs  function.rs  interpreter.rs  interpreter_error.rs  lib.rs  lox_literal.rs  lox_tree.rs  lox_value.rs  main.rs  parser.rs  parser_errors.rs  scanner.rs  token.rs  token_type.rs  utils.rs
src/ast/: callable.rs  function.rs  mod.rs
src/interpreter/: enviroment.rs  environment.rs  error.rs  globals.rs  mod.rs  resolver.rs  runtime_error.rs  tests.rs
src/lib/: ast.rs  callable.rs  error.rs  function.rs  lib.rs  lox_value.rs  token.rs  utils.rs
src/lib/interpreter/: environment.rs  globals.rs  mod.rs  resolver.rs
src/lib/parser/: mod.rs
src/parser/: error.rs  mod.rs  parser_error.rs  parser_errors.rs  tests.rs
src/zig-cache/o/57bd344487c38b3853ed8502b1005a5b/: builtin.zig
