[package]
name = "lox-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
parse-display = "0.5.5"
clap = { version = "3.2.21", features = ["derive"] }
colored = "2"

[dev-dependencies]
parameterized = "1"
